[project]
name = "be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "openai>=2.8.1",
    "opencv-python>=4.12.0.88",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "scikit-image>=0.25.2",
    "sqlalchemy>=2.0.44",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
    "uvicorn>=0.38.0",
]
